# fft-water

./: CMakeLists.txt  Makefile  README.md
include/: Camera.h  Mesh.h  Scene.h  Texture.h  shaderClass.h
include/glad/: glad.h
shaders/: img.frag.glsl  img.vert.glsl  ocean.frag.glsl  ocean.vert.glsl  oceanOG.frag.glsl
shaders/compute_shaders/: spectrum_0.comp.glsl  spectrum_t.comp.glsl
src/: Camera.cpp  Main.cpp  Mesh.cpp  Scene.cpp  Texture.cpp  glad.c  shaderClass.cpp
